fixed alignment, done website

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body{
 }
 
 /*Global */
-
 *{
 	margin:0;
 	padding: 0;
@@ -159,7 +158,15 @@ header a:hover{
 aside#sidebar{
 	float: right;
 	width: 30%;
-	margin-top: 50px;
+	margin-top: 55px;
+}
+
+aside#sidebar .box2{
+	margin-top: 30px;
+}
+
+aside#sidebar .box3{
+	margin-top: 25px;
 }
 
 aside#sidebar .quote input, aside#sidebar .quote textarea{
@@ -175,6 +182,7 @@ aside#sidebar .quote input, aside#sidebar .quote textarea{
 article#main-col{
 	float: left;
 	width: 65%;
+	margin-top: 55px;
 }
 
 /* Services */
@@ -184,16 +192,6 @@ ul#services li{
 	border: #cccccc solid 1px;
 	margin-bottom: 5px;
 	background: #e6e6e6;
-}
-
-
-*{
-	margin:0;
-	padding: 0;
-}
-
-html, body{
-	height: 100%
 }
 
 #main-container{
@@ -210,10 +208,7 @@ html, body{
 	height: 40px;
 	margin-top: -50px;
 	clear: both;
-
 }
-
-
 
 footer{
 	padding: 5px;
@@ -228,7 +223,6 @@ footer p{
 }
 
 /*Media queries*/
-
 @media(max-width: 756px){
 	header #branding,
 	header nav,
@@ -271,9 +265,9 @@ footer p{
 		margin-bottom: 5px;
 	}
 
-#boxes{
-	margin-top: 20px;
-}
+	#boxes{
+		margin-top: 20px;
+	}
 	.quote button{
 		display: block;
 		width: 94%;
@@ -287,5 +281,5 @@ footer p{
 	.clr{
 	clear: both;
 	margin-top: 30px;
-}
+	}
 }
